--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -8,5 +8,6 @@
     "downscalePercent": 100
   },
   "livePreview": false,
-  "newLinkFormat": "relative"
+  "newLinkFormat": "relative",
+  "useMarkdownLinks": true
 }
